# DUQLinear4bitCUDA

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.py
include/: benchmark.h  common.h  cutools.cuh  gemm.h  int4.h  linear.h  logger.h  quant.h  quant_tensor.h
python/nn/: __init__.py  hadamard.py  linear.py  matmul.py  quantizer.py
python/tools/: __init__.py  quantization.py  tensor_utils.py
qlinear4bit/nn/: __init__.py  linear.py  matmul.py  quantizer.py
qlinear4bit/tools/: quantization.py  tensor_utils.py
src/export/: bindings.cpp
src/kernels/: flashinfer.cu  gemm.cu  quant.cu  quant2.cu
src/module/: linear.cu  quant_tensor.cu
src/nn/: linear.cu
src/tools/: benchmark.cpp  logger.cpp
test/: benchmark.py  pipeline.cu  qunat_test.py  test.cu  test.py  tf_layer_test.py
